Fixed tests generating the properties files with more output and updated properties files originals

--- a/src/test/resources/sample/simple-date/simple-date.panl.properties
+++ b/src/test/resources/sample/simple-date/simple-date.panl.properties
@@ -473,16 +473,17 @@ panl.type.y=solr.IntPointField
 #panl.suffix.y=suffix
 # This field can be configured as a range facet by setting the following
 # properties
-#panl.range.facet.w=true
-#panl.range.min.w=0
-#panl.range.max.w=100
-#panl.range.prefix.w=range_prefix
-#panl.range.infix.w=range_infix
-#panl.range.suffix.w=range_suffix
-#panl.range.min.value.w=min_value
-#panl.range.max.value.w=max_value
-#panl.range.min.wildcard.w=true
-#panl.range.max.wildcard.w=true
+#panl.range.facet.y=true
+#panl.range.min.y=0
+#panl.range.max.y=100
+#panl.range.prefix.y=range_prefix
+#panl.range.infix.y=range_infix
+#panl.range.suffix.y=range_suffix
+#panl.range.min.value.y=min_value
+#panl.range.max.value.y=max_value
+#panl.range.min.wildcard.y=true
+#panl.range.max.wildcard.y=true
+#panl.range.suppress.y=false
 # By default Solr will always return facet ordered by count descending (i.e.
 # The largest counts first) - uncomment the below line to return it in value
 # order (e.g. alphabetical/numerical)
@@ -505,16 +506,17 @@ panl.type.d=solr.IntPointField
 #panl.suffix.d=suffix
 # This field can be configured as a range facet by setting the following
 # properties
-#panl.range.facet.w=true
-#panl.range.min.w=0
-#panl.range.max.w=100
-#panl.range.prefix.w=range_prefix
-#panl.range.infix.w=range_infix
-#panl.range.suffix.w=range_suffix
-#panl.range.min.value.w=min_value
-#panl.range.max.value.w=max_value
-#panl.range.min.wildcard.w=true
-#panl.range.max.wildcard.w=true
+#panl.range.facet.d=true
+#panl.range.min.d=0
+#panl.range.max.d=100
+#panl.range.prefix.d=range_prefix
+#panl.range.infix.d=range_infix
+#panl.range.suffix.d=range_suffix
+#panl.range.min.value.d=min_value
+#panl.range.max.value.d=max_value
+#panl.range.min.wildcard.d=true
+#panl.range.max.wildcard.d=true
+#panl.range.suppress.d=false
 # By default Solr will always return facet ordered by count descending (i.e.
 # The largest counts first) - uncomment the below line to return it in value
 # order (e.g. alphabetical/numerical)
@@ -557,16 +559,17 @@ panl.type.D=solr.IntPointField
 #panl.suffix.D=suffix
 # This field can be configured as a range facet by setting the following
 # properties
-#panl.range.facet.w=true
-#panl.range.min.w=0
-#panl.range.max.w=100
-#panl.range.prefix.w=range_prefix
-#panl.range.infix.w=range_infix
-#panl.range.suffix.w=range_suffix
-#panl.range.min.value.w=min_value
-#panl.range.max.value.w=max_value
-#panl.range.min.wildcard.w=true
-#panl.range.max.wildcard.w=true
+#panl.range.facet.D=true
+#panl.range.min.D=0
+#panl.range.max.D=100
+#panl.range.prefix.D=range_prefix
+#panl.range.infix.D=range_infix
+#panl.range.suffix.D=range_suffix
+#panl.range.min.value.D=min_value
+#panl.range.max.value.D=max_value
+#panl.range.min.wildcard.D=true
+#panl.range.max.wildcard.D=true
+#panl.range.suppress.D=false
 # By default Solr will always return facet ordered by count descending (i.e.
 # The largest counts first) - uncomment the below line to return it in value
 # order (e.g. alphabetical/numerical)
