Configured correct copyright notice fo JavaScript files with exclusions

--- a/build.gradle
+++ b/build.gradle
@@ -168,7 +168,10 @@ copyrightr {
 			"src/test/java/**/*.java",
 			"src/integration/java/**/*.java",
 			"**/*.class",
-			"**/package-info.java"
+			"**/package-info.java",
+			"**/LpseTokeniser.java",
+			"**/jquery*.*",
+			"**/nouislider.min.js"
 	]
 
 	onlyReplaceFirst = true
