fixed bug where Range token (single value) would lead to all other facets including an additional character on the LPSE path for the addition URLs

--- a/src/integration/resources/panl.properties
+++ b/src/integration/resources/panl.properties
@@ -7,7 +7,12 @@ panl.results.testing.urls=true
 panl.status.404.verbose=true
 panl.status.500.verbose=true
 
-panl.collection.mechanical-pencils=../../dist/sample/panl/mechanical-pencils/mechanical-pencils.panl.properties
+panl.collection.mechanical-pencils=../../dist/sample/panl/mechanical-pencils-or/mechanical-pencils-or.panl.properties,\
+    ../../dist/sample/panl/mechanical-pencils-or/mechanical-pencils-or-separator.panl.properties,\
+    ../../dist/sample/panl/mechanical-pencils/mechanical-pencils.panl.properties,\
+    ../../dist/sample/panl/mechanical-pencils/mechanical-pencils-more.panl.properties,\
+    ../../dist/sample/panl/mechanical-pencils/mechanical-pencils-multi-separator.panl.properties
+
 #panl.collection.simple-date=simple-date.panl.properties
 #panl.collection.mechanical-pencils=mechanical-pencils.panl.properties,\
 #  src/dist/sample/panl/mechanical-pencils-or/mechanical-pencils-or.panl.properties
