--- a/src/test/resources/sample/mechanical-pencils/mechanical-pencils.panl.properties
+++ b/src/test/resources/sample/mechanical-pencils/mechanical-pencils.panl.properties
@@ -794,7 +794,7 @@ panl.type.D=solr.BoolField
 #panl.bool.D.false=is-not-disassemble
 # You may also want to be able to display this as a checkbox which will pass
 # through either a 'true' or 'false' value when selected
- panl.bool.checkbox.D=true_or_false
+#panl.bool.checkbox.D=true_or_false
 # If you want this facet to only appear if another facet has already been 
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.D=
@@ -834,7 +834,7 @@ panl.type.I=solr.BoolField
 #panl.bool.I.false=is-not-in_built_eraser
 # You may also want to be able to display this as a checkbox which will pass
 # through either a 'true' or 'false' value when selected
- panl.bool.checkbox.I=true_or_false
+#panl.bool.checkbox.I=true_or_false
 # If you want this facet to only appear if another facet has already been 
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.I=
@@ -854,6 +854,9 @@ panl.type.t=solr.TextField
 # so that single page search can be generated properly.  You __SHOULD_NOT___
 # change this unless the underlying Solr schema changes
 panl.multivalue.t=true
+# If you want to have a mult-value separator enabled, uncomment the following
+# property and set it to any string.
+#panl.multivalue.separator.t=,
 # The following two properties are optional and may be set to any value
 #panl.prefix.t=prefix
 #panl.suffix.t=suffix
