updated book store properties start of LPSE length 2

--- a/src/testintegration/resources/panl.integration.properties
+++ b/src/testintegration/resources/panl.integration.properties
@@ -18,4 +18,6 @@ panl.collection.mechanical-pencils=../../dist/sample/panl/mechanical-pencils-or/
 #  src/dist/sample/panl/mechanical-pencils-or/mechanical-pencils-or.panl.properties
 #panl.collection.mechanical-pencils=src/dist/sample/panl/mechanical-pencils/mechanical-pencils.panl.properties,\
 #    src/dist/sample/panl/mechanical-pencils-or/mechanical-pencils-or.panl.properties
+
 panl.collection.simple-date=../../dist/sample/panl/simple-date/simple-date.panl.properties
+panl.collection.book-store=book-store-lpse-2.panl.properties
