Updated tests, fixed boolean facets

--- a/src/test/resources/sample/mechanical-pencils/mechanical-pencils.panl.properties
+++ b/src/test/resources/sample/mechanical-pencils/mechanical-pencils.panl.properties
@@ -999,3 +999,15 @@ body_shape
 #                                ~ ~ ~ * ~ ~ ~
 
 panl.sort.fields=
+
+#                       Panl Search Field Configuration
+#                       ---- ------ ----- -------------
+# Below are the fields that are configured to be able to be searched on, these
+# fields must be defined as a panl.search (which means that they cannot be
+# faceted upon) and __MUST__ be the Solr field name.
+#
+# If left blank, then this will default to the *:* query selector
+#
+#                                ~ ~ ~ * ~ ~ ~
+
+panl.search.fields=
