Added in testing for displaying fields and facets for index/stored/analyse and the impact

--- a/src/test/config/panl/panl.properties
+++ b/src/test/config/panl/panl.properties
@@ -4,6 +4,7 @@ panl.results.testing.urls=true
 panl.status.404.verbose=true
 panl.status.500.verbose=true
 panl.decimal.point=true
-panl.collection.book-store=testing.panl.properties
+panl.collection.testing=testing-all-facets.panl.properties,\
+  testing-all-fields.panl.properties
 
 
