--- a/src/test/config/panl/testing-all-fields.panl.properties
+++ b/src/test/config/panl/testing-all-fields.panl.properties
@@ -20,48 +20,47 @@ solr.highlight=true
 # <field "indexed"="true" "stored"="true" "name"="id" "type"="string" "multiValued"="false" "required"="true" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.field.i=id
-panl.search.i=id
 panl.name.i=Id
 panl.type.i=solr.StrField
 
 # <field "indexed"="true" "stored"="false" "name"="indexed_field" "type"="string" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
-panl.facet.I=indexed_field
+panl.field.I=indexed_field
 panl.search.I=indexed_field
 panl.name.I=Indexed Field
 panl.type.I=solr.StrField
 
 # <field "indexed"="false" "stored"="true" "name"="stored_field" "type"="string" "multiValued"="false" />
 # This configuration can __ONLY__ ever be a field as it is not indexed in Solr
-panl.facet.S=stored_field
+panl.field.S=stored_field
 panl.search.S=stored_field
 panl.name.S=Stored Field
 panl.type.S=solr.StrField
 
 # <field "indexed"="true" "stored"="true" "name"="both_indexed_and_stored_field" "type"="string" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
-panl.facet.b=both_indexed_and_stored_field
+panl.field.b=both_indexed_and_stored_field
 panl.search.b=both_indexed_and_stored_field
 panl.name.b=Both Indexed And Stored Field
 panl.type.b=solr.StrField
 
 # <field "indexed"="true" "stored"="false" "name"="analysed_indexed_field" "type"="text_general" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
-panl.facet.a=analysed_indexed_field
+panl.field.a=analysed_indexed_field
 panl.search.a=analysed_indexed_field
 panl.name.a=Analysed Indexed Field
 panl.type.a=solr.TextField
 
 # <field "indexed"="false" "stored"="true" "name"="analysed_stored_field" "type"="text_general" "multiValued"="false" />
 # This configuration can __ONLY__ ever be a field as it is not indexed in Solr
-panl.facet.A=analysed_stored_field
-panl.search.A=Analysed Stored Field
+panl.field.A=analysed_stored_field
+panl.search.A=analysed_stored_field
 panl.name.A=Analysed Stored Field
 panl.type.A=solr.TextField
 
 # <field "indexed"="true" "stored"="true" "name"="analysed_both_field" "type"="text_general" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
-panl.facet.h=analysed_both_field
+panl.field.h=analysed_both_field
 panl.search.h=analysed_both_field
 panl.name.h=Analysed Both Field
 panl.type.h=solr.TextField
