--- a/src/testintegration/resources/panl.integration.properties
+++ b/src/testintegration/resources/panl.integration.properties
@@ -20,4 +20,5 @@ panl.collection.mechanical-pencils=../../dist/sample/panl/mechanical-pencils-or/
 #    src/dist/sample/panl/mechanical-pencils-or/mechanical-pencils-or.panl.properties
 
 panl.collection.simple-date=../../dist/sample/panl/simple-date/simple-date.panl.properties
-panl.collection.book-store=book-store-lpse-2.panl.properties
+panl.collection.book-store=book-store-lpse-2.panl.properties,\
+  unless.panl.properties
