Additional book added for example search results, regen of bookstore panl.properties and updated gradle application script.

--- a/build.gradle
+++ b/build.gradle
@@ -143,6 +143,10 @@ application {
 	mainClass = 'com.synapticloop.panl.Main'
 }
 
+startScripts {
+	classpath = files( '$APP_HOME/lib/*' )
+}
+
 distributions {
 	main {
 		distributionBaseName = 'solr-panl-' + properties.getProperty("panl.solr.version")
