fixed spelling mistake in generated tests

--- a/src/test/resources/sample/mechanical-pencils/mechanical-pencils.panl.properties
+++ b/src/test/resources/sample/mechanical-pencils/mechanical-pencils.panl.properties
@@ -854,7 +854,7 @@ panl.type.t=solr.TextField
 # so that single page search can be generated properly.  You __SHOULD_NOT___
 # change this unless the underlying Solr schema changes
 panl.multivalue.t=true
-# If you want to have a mult-value separator enabled, uncomment the following
+# If you want to have a multi-value separator enabled, uncomment the following
 # property and set it to any string.
 #panl.multivalue.separator.t=,
 # The following two properties are optional and may be set to any value
