Added in fields that were neither indexed or stored

--- a/src/test/config/panl/testing-all-facets.panl.properties
+++ b/src/test/config/panl/testing-all-facets.panl.properties
@@ -45,6 +45,15 @@ panl.search.b=both_indexed_and_stored_field
 panl.name.b=Both Indexed And Stored Field
 panl.type.b=solr.StrField
 
+# <field name="none_field" type="string" indexed="false" stored="false" multiValued="false" />
+# This configuration can be neither either a field nor a facet as it is neither
+# indexed nor stored in Solr (The Panl generator will not actually output this
+# field - this was hand added)
+panl.facet.O=none_field
+panl.search.O=none_field
+panl.name.O=None Field
+panl.type.O=solr.StrField
+
 # <field "indexed"="true" "stored"="false" "name"="analysed_indexed_field" "type"="text_general" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.a=analysed_indexed_field
@@ -55,7 +64,7 @@ panl.type.a=solr.TextField
 # <field "indexed"="false" "stored"="true" "name"="analysed_stored_field" "type"="text_general" "multiValued"="false" />
 # This configuration can __ONLY__ ever be a field as it is not indexed in Solr
 panl.facet.A=analysed_stored_field
-panl.search.A=Analysed Stored Field
+panl.search.A=analysed_stored_field
 panl.name.A=Analysed Stored Field
 panl.type.A=solr.TextField
 
@@ -66,14 +75,25 @@ panl.search.h=analysed_both_field
 panl.name.h=Analysed Both Field
 panl.type.h=solr.TextField
 
+# <field name="analysed_none_field" type="text_general" indexed="false" stored="false" multiValued="false" />
+# This configuration can be neither either a field nor a facet as it is neither
+# indexed nor stored in Solr (The Panl generator will not actually output this
+# field - this was hand added)
+panl.facet.N=analysed_none_field
+panl.search.N=analysed_none_field
+panl.name.N=Analysed None Field
+panl.type.N=solr.TextField
+
 panl.lpse.order=z,\
 i,\
 I,\
 S,\
 b,\
+O,\
 a,\
 A,\
 h,\
+N,\
 q,\
 p,\
 n,\
@@ -86,15 +106,19 @@ panl.results.fields.default=id,\
   indexed_field,\
   stored_field,\
   both_indexed_and_stored_field,\
+  none_field,\
   analysed_indexed_field,\
   analysed_stored_field,\
-  analysed_both_field
+  analysed_both_field,\
+  analysed_none_field
 
 panl.sort.fields=
 
 panl.search.fields=indexed_field,\
   stored_field,\
   both_indexed_and_stored_field,\
+  none_field,\
   analysed_indexed_field,\
   analysed_stored_field,\
-  analysed_both_field
+  analysed_both_field,\
+  analysed_none_field
