--- a/src/test/config/panl/testing-all-fields.panl.properties
+++ b/src/test/config/panl/testing-all-fields.panl.properties
@@ -20,6 +20,7 @@ solr.highlight=true
 # <field "indexed"="true" "stored"="true" "name"="id" "type"="string" "multiValued"="false" "required"="true" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.field.i=id
+panl.search.i=id
 panl.name.i=Id
 panl.type.i=solr.StrField
 
@@ -44,6 +45,15 @@ panl.search.b=both_indexed_and_stored_field
 panl.name.b=Both Indexed And Stored Field
 panl.type.b=solr.StrField
 
+# <field name="none_field" type="string" indexed="false" stored="false" multiValued="false" />
+# This configuration can be neither either a field nor a facet as it is neither
+# indexed nor stored in Solr (The Panl generator will not actually output this
+# field - this was hand added)
+panl.field.O=none_field
+panl.search.O=none_field
+panl.name.O=None Field
+panl.type.O=solr.StrField
+
 # <field "indexed"="true" "stored"="false" "name"="analysed_indexed_field" "type"="text_general" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.field.a=analysed_indexed_field
@@ -65,14 +75,25 @@ panl.search.h=analysed_both_field
 panl.name.h=Analysed Both Field
 panl.type.h=solr.TextField
 
+# <field name="analysed_none_field" type="text_general" indexed="false" stored="false" multiValued="false" />
+# This configuration can be neither either a field nor a facet as it is neither
+# indexed nor stored in Solr (The Panl generator will not actually output this
+# field - this was hand added)
+panl.field.N=analysed_none_field
+panl.search.N=analysed_none_field
+panl.name.N=Analysed None Field
+panl.type.N=solr.TextField
+
 panl.lpse.order=z,\
 i,\
 I,\
 S,\
 b,\
+O,\
 a,\
 A,\
 h,\
+N,\
 q,\
 p,\
 n,\
@@ -85,15 +106,19 @@ panl.results.fields.default=id,\
   indexed_field,\
   stored_field,\
   both_indexed_and_stored_field,\
+  none_field,\
   analysed_indexed_field,\
   analysed_stored_field,\
-  analysed_both_field
+  analysed_both_field,\
+  analysed_none_field
 
 panl.sort.fields=
 
 panl.search.fields=indexed_field,\
   stored_field,\
   both_indexed_and_stored_field,\
+  none_field,\
   analysed_indexed_field,\
   analysed_stored_field,\
-  analysed_both_field
+  analysed_both_field,\
+  analysed_none_field
