--- a/src/test/resources/sample/simple-date/simple-date.panl.properties
+++ b/src/test/resources/sample/simple-date/simple-date.panl.properties
@@ -415,13 +415,13 @@ solr.highlight=false
 #                                ~ ~ ~ * ~ ~ ~
 
 panl.lpse.fields=
-# <field "stored"="true" "name"="id" "type"="string" "multiValued"="false" "required"="true" />
+# <field "name"="id" "type"="string" "stored"="true" "required"="true" "multiValued"="false" />
 # This configuration can __ONLY__ ever be a field as it is not indexed in Solr
 panl.field.i=id
 panl.name.i=Id
 panl.type.i=solr.StrField
 
-# <field "indexed"="true" "stored"="true" "name"="solr_date" "type"="pdate" "multiValued"="false" />
+# <field "name"="solr_date" "type"="pdate" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.S=solr_date
 panl.name.S=Solr Date
@@ -439,7 +439,7 @@ panl.type.S=solr.DatePointField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.S=
 
-# <field "indexed"="true" "stored"="true" "name"="text_date" "type"="string" "multiValued"="false" />
+# <field "name"="text_date" "type"="string" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.t=text_date
 panl.name.t=Text Date
@@ -459,7 +459,7 @@ panl.type.t=solr.StrField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.t=
 
-# <field "indexed"="true" "stored"="true" "name"="year" "type"="pint" "multiValued"="false" />
+# <field "name"="year" "type"="pint" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.y=year
 panl.name.y=Year
@@ -492,7 +492,7 @@ panl.type.y=solr.IntPointField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.y=
 
-# <field "indexed"="true" "stored"="true" "name"="decade" "type"="pint" "multiValued"="false" />
+# <field "name"="decade" "type"="pint" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.d=decade
 panl.name.d=Decade
@@ -525,7 +525,7 @@ panl.type.d=solr.IntPointField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.d=
 
-# <field "indexed"="true" "stored"="true" "name"="month" "type"="string" "multiValued"="false" />
+# <field "name"="month" "type"="string" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.m=month
 panl.name.m=Month
@@ -545,7 +545,7 @@ panl.type.m=solr.StrField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.m=
 
-# <field "indexed"="true" "stored"="true" "name"="day" "type"="pint" "multiValued"="false" />
+# <field "name"="day" "type"="pint" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.D=day
 panl.name.D=Day
@@ -578,7 +578,7 @@ panl.type.D=solr.IntPointField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.D=
 
-# <field "indexed"="true" "stored"="true" "name"="week_day" "type"="string" "multiValued"="false" />
+# <field "name"="week_day" "type"="string" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.w=week_day
 panl.name.w=Week Day
@@ -598,7 +598,7 @@ panl.type.w=solr.StrField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.w=
 
-# <field "indexed"="true" "stored"="true" "name"="text" "type"="text_general" "multiValued"="true" />
+# <field "name"="text" "type"="text_general" "indexed"="true" "stored"="true" "multiValued"="true" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.T=text
 panl.name.T=Text
