--- a/src/main/resources/panl_collection_url.panl.properties.template
+++ b/src/main/resources/panl_collection_url.panl.properties.template
@@ -471,6 +471,47 @@ $panl.lpse.fields
 
 $panl.lpse.order
 
+#                        Panl Facet Order Configuration
+#                        ---- ----- ----- -------------
+# This is the order in which the facets will be returned in the Panl JSON
+# response.  This differs from the above property, which controls the order of
+# facets values in the URL.
+#
+# NOTE: The panl.param.* LPSE codes are not included in the following list, if
+#       any of the defined facets are not included in the list, then they will
+#       automatically be appended to the order.
+#
+# This will be returned in the Panl JSON response object with the key:
+#
+#     panl.facetorder
+#
+# As a JSON Array of objects in the form:
+#     [
+#       {
+#         "type": "<type>",
+#         "panl_code": "<panl_code>",
+#         "facet_name": "<facet_name>"
+#       },
+#
+#       ...
+#
+#     ]
+#
+# where:
+#       <type> is the type of the facet and maps to the available JSON key,
+#              which will be one of:
+#                - facets
+#                - range_facets
+#                - data_range_facets
+#  <panl_code> is the bound LPSE code which can be used as a lookup
+#              name in the solr schema.xml configuration file
+# <facet_name> is the solr field name which can be used as a lookup
+#
+#                                ~ ~ ~ * ~ ~ ~
+
+$panl.lpse.facetorder
+
+
 #                       Panl LPSE Ignore Configuration
 #                       ---- ---- ------ -------------
 # Any LPSE code listed below will be ignored and not returned in either the
