--- a/src/main/resources/panl.properties.template
+++ b/src/main/resources/panl.properties.template
@@ -150,6 +150,28 @@ $panl.decimal.point
 
 panl.remove.solr.json.keys=false
 
+#                Add 'extra' Information To Every Response
+#                --- ------- ----------- -- ----- --------
+# This property __MUST__ be a valid JSON object and will be added to every
+# response from the Panl server.  It will be added to the JSON response object
+# under the panl.extra JSON key.
+#
+# You may also add an 'extra' JSON object to each of the collections, with the
+# panl.extra JSON key which will override any keys in this JSON object.
+#
+# IMPORTANT:
+#
+#   - If this is not a valid JSON object, then the server will error and fail
+#     to start.
+#   - These values may be overwritten by the panl.collection.extra property in
+#     the individual <panl_collection_url>.panl.properties files
+#   - You may remove this property or leave it blank and it will have no effect
+#     and will not be included in the Panl JSON Response
+#
+#                                ~ ~ ~ * ~ ~ ~
+
+panl.server.extra=
+
 #                     Collection Property File Inclusion
 #                     ---------- -------- ---- ---------
 # Each property file defines a singular collection, with the associated
